<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:fadingEdge="vertical"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:showDividers="middle"
        android:divider="@drawable/shape"
        android:dividerPadding="1dp"
        tools:context="com.example.shao.news.News_List">
        <TextView
            android:id="@+id/title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:text="@string/app_news_content_title1"
            android:onClick="change2"
            android:clickable="true"
            android:textColor="@drawable/text_color"
        />
        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:text="@string/app_news_content_title2"
            android:onClick="change2"
            android:textColor="@drawable/text_color"
            />
        <TextView
            android:id="@+id/title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:text="@string/app_news_content_title3"
            android:onClick="change2"
            android:textColor="@drawable/text_color"
            />
        <TextView
            android:id="@+id/title4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:text="@string/app_news_content_title4"
            android:onClick="change2"
            android:textColor="@drawable/text_color"
            />
        <TextView
            android:id="@+id/title5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:text="@string/app_news_content_title5"
            android:onClick="change2"
            android:textColor="@drawable/text_color"
            />
        <TextView
            android:id="@+id/title6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:text="@string/app_news_content_title6"
            android:onClick="change2"
            android:textColor="@drawable/text_color"
            />
        <TextView
            android:id="@+id/title7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:text="@string/app_news_content_title7"
            android:onClick="change2"
            android:textColor="@drawable/text_color"
            />
        <TextView
            android:id="@+id/title8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:text="@string/app_news_content_title8"
            android:onClick="change2"
            android:textColor="@drawable/text_color"
            />
        <TextView
            android:id="@+id/title9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:text="@string/app_news_content_title9"
            android:onClick="change2"
            android:textColor="@drawable/text_color"
            />
        <TextView
            android:id="@+id/title10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:text="@string/app_news_content_title10"
            android:onClick="change2"
            android:textColor="@drawable/text_color"
            />
        <TextView
            android:id="@+id/title11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:text="@string/app_news_content_title11"
            android:onClick="change2"
            android:textColor="@drawable/text_color"
            />
        <TextView
            android:id="@+id/title12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:text="@string/app_news_content_title12"
            android:onClick="change2"
            android:textColor="@drawable/text_color"
            />
        <TextView
            android:id="@+id/title13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:text="@string/app_news_content_title13"
            android:onClick="change2"
            android:textColor="@drawable/text_color"
            />
        <TextView
            android:id="@+id/title14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:text="@string/app_news_content_title14"
            android:onClick="change2"
            android:textColor="@drawable/text_color"
            />
        <TextView
            android:id="@+id/title15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:text="@string/app_news_content_title15"
            android:onClick="change2"
            android:textColor="@drawable/text_color"
            />
        <TextView
            android:id="@+id/title16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:text="@string/app_news_content_title16"
            android:onClick="change2"
            android:textColor="@drawable/text_color"
            />
    </LinearLayout>
</ScrollView>
